--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,12 @@
     "nigeria",
     "african"
   ],
+  "authors": [
+    {
+        "name": "Erisan Olasheni",
+        "email": "cgi.helpcentre@gmail.com"
+    }
+],
   "minimum-stability": "stable",
   "require": {
     "php": ">=5.3.0"
